<resources>
    <string name="app_name">VIA Social</string>
    <string name="send_button_label">Send</string>
    <string name="welcome_string">Welcome to VIA Social</string>
    <string name="notRegistered">Not registered? Click here to register</string>
    <string name="alreadyRegistered">Already registered? Click here to login</string>
    <string name="enterEmail">Enter your email</string>
    <string name="loginText">Login</string>
    <string name="passwordText">Enter your password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="passwordHint">Enter your password</string>
    <string name="emailHint">Enter your email</string>
    <string name="nameHint">Enter First and Last name</string>
    <string name="registrationLabel">Registration</string>
    <string name="title_activity_main_menu">VIA Social</string>
    <string name="tab_text_1">Users</string>
    <string name="tab_text_2">Chats</string>
    <string name="tab_text_3">My profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="full_name_textView">Please enter your full name</string>
    <string name="addressLabel">Please enter your address</string>
    <string name="studyProgramme">Please enter your study programme</string>
    <string name="interests">Please share what are your interests</string>
    <string name="phone">Please enter your phone number</string>
    <string name="saveButton">Save</string>
    <string name="logoutText">Log out</string>
    <string name="groupChatText">Group Chat</string>
    <string name="username">username</string>
    <string name="info">info</string>
    <string name="type_a_message">Type a message...</string>
    <string name="image_content">Image</string>
</resources>
