<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountAuthentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loginText"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <EditText
            android:id="@+id/emailLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enterEmail"
            android:layout_gravity="center"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/passwordLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordText"
            android:layout_gravity="center"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:onClick="login"
            android:layout_gravity="center"
            android:layout_margin="15dp"/>

    </LinearLayout>

</RelativeLayout>