<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/image"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:layout_margin="30dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyRegistered"
        android:onClick="goToLogin"/>

    <Button
        android:id="@+id/notRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notRegistered"
        android:layout_margin="10dp"
        android:onClick="goToRegister"/>

</LinearLayout>