<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_string"
            android:layout_gravity="center"
            android:layout_margin="30dp"/>

        <Button
            android:id="@+id/notRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notRegistered"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:onClick="goToRegister"/>

        <Button
            android:id="@+id/alreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyRegistered"
            android:layout_gravity="center"
            android:onClick="goToLogin"/>

    </LinearLayout>
</RelativeLayout>